<resources>
    <string name="app_name">AGI Event</string>
    <string name="welcome">Welcome to AGI Event</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="profile">Profile</string>
    <string name="newsroom">News Room</string>
    <string name="messages">Messages</string>
    <string name="agenda">Agenda</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="announcements">Announcements</string>
    <string name="logout">Logout</string>
    <string name="app_logo">App Logo</string>
    <string name="app_version">Version 1.0</string>
</resources>